Organizacao do CSS e Javascript da app procedures

--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -62,7 +62,7 @@
     			        {% include "bar_chart.html" %}
     			    {% endwith %}
                     <br/>
-                    <h4>Uso do CPU</h4>
+                    <h4>Uso da CPU</h4>
                     {% with table5.lines.Ocupado.0 as value %}
     			        {% include "bar_chart.html" %}
     			    {% endwith %}
