--- a/nimbus/procedures/templates/base_procedures.html
+++ b/nimbus/procedures/templates/base_procedures.html
@@ -1,14 +1,7 @@
 {% extends "base.html" %}
 
 {% block headtags %}
-
-<script type="text/javascript" charset="utf-8">
-    $(document).ready(function(){
-        
-        $('#id_profile').parents().filter('p').append($('<div class="clear">').html('<a href="{% url nimbus.procedures.views.profile_add %}">Adicionar novo perfil</a>'))
-        
-    });
-</script>
+<script type="text/javascript" src="/media/js/procedures.js"></script>
 {% endblock %}
 
 {% block page %}
@@ -19,12 +12,13 @@
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
 		<h2>{{title}}</h2>
-	</div>		<!-- .block_head ends -->
+	</div>
 
     <div class="block_content">
     
         <form method="post" action="">
             {% include "form.html" %}
+			<input type="hidden" value="{% url nimbus.procedures.views.profile_add %}" id="profile" name="profile" />
             <p><input type="submit" class="submit" value="Confirm" /></p>
         </form>
     
