Organizei o CSS e Javascript dos agendamentos e adicionei a mascara de hora e minuto que faltava no form de edicao de agendamento.

--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -2,8 +2,10 @@
 
 {% block headtags %}
 <link type="text/css" rel="stylesheet" href="/media/css/backup.css"/>
+<link rel="stylesheet" type="text/css" href="/media/css/schedules.css" />
 <script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
 <script type="text/javascript" src="/media/js/backup.js"></script>
+<script type="text/javascript" src="/media/js/schedules.js"></script>
 {% endblock %}
 
 {% block page %}
