--- a/nimbus/filesets/templates/form_filesets_add.html
+++ b/nimbus/filesets/templates/form_filesets_add.html
@@ -28,7 +28,7 @@
 
 <p>
     {% if errors.path %}
-    <ul class="errorlist" style="">
+    <ul class="errorlist">
         <li>{{ errors.path }}</li>
     </ul>
     {% endif %}
