--- a/nimbus/schedules/templates/form_schedules_add.html
+++ b/nimbus/schedules/templates/form_schedules_add.html
@@ -1,32 +1,16 @@
-<script type="text/javascript" charset="utf-8">
-    $(document).ready(function(){
-        $('.schedule_activate').change(function(){
-            _checked = $(this).attr('checked');
-            _class = $(this).attr('id');
-            if (_checked) {
-                $('.' + _class).addClass('active');
-            } else {
-                $('.' + _class).removeClass('active');
-            }
-        });
-        $('.schedule_activate').change();
-    });
-</script>
-
-
-<div style="float: right; padding: 10px 20px 10px 0; clear: both">
+<div id="error-box">
     {% if errors.schedule_name %}
-    <ul class="errorlist" style="">
+    <ul class="errorlist">
         <li>{{ errors.schedule_name }}</li>
     </ul>
     {% endif %}
     {% if errors.schedule_day %}
-    <ul class="errorlist" style="">
+    <ul class="errorlist">
         <li>{{ errors.schedule_day }}</li>
     </ul>
     {% endif %}
     {% if errors.schedule_hour %}
-    <ul class="errorlist" style="">
+    <ul class="errorlist">
         <li>{{ errors.schedule_hour }}</li>
     </ul>
     {% endif %}
@@ -44,7 +28,7 @@
 	</ul>
 
     <p>Agende a execução deste backup, é possível ativar mais de um agendamento.</p>
-</div>		<!-- .sidebar ends -->
+</div>
 
 <div class="sidebar_content" id="mensal">
     <p>
@@ -60,7 +44,7 @@
     </p>
     <p>
         <label for="mothly_hour">Hora:</label><br/>
-        <input type="text" name="schedule.monthly.hour" id="mothly_hour" class="text small mascara_hora" style="width: 45px" value="{{schedule_monthly_hour}}" /><br/>
+        <input type="text" name="schedule.monthly.hour" id="mothly_hour" class="text small mascara_hora" value="{{schedule_monthly_hour}}" /><br/>
         <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
     </p>
     <p>
@@ -70,9 +54,9 @@
             <option value="{{level}}" {% if schedule_monthly_level == level %}selected="selected"{% endif %}>{{level}}</option>
             {% endfor %}
         </select><br/>
-        <small style="line-height: 1.2em">No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
+        <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
     </p>
-</div>		<!-- .sidebar_content ends -->
+</div>
 
 <div class="sidebar_content" id="semanal">
     <p>
@@ -88,7 +72,7 @@
     </p>
     <p>
         <label for="mothly_hour">Hora:</label><br/>
-        <input type="text" name="schedule.weekly.hour" id="mothly_hour" class="text small mascara_hora" style="width: 45px" maxlength="5" value="{{schedule_weekly_hour}}" /><br/>
+        <input type="text" name="schedule.weekly.hour" id="mothly_hour" class="text small mascara_hora" maxlength="5" value="{{schedule_weekly_hour}}" /><br/>
         <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
     </p>
     <p>
@@ -98,9 +82,9 @@
             <option value="{{level}}" {% if schedule_weekly_level == level %}selected="selected"{% endif %}>{{level}}</option>
             {% endfor %}
         </select>
-        <small style="line-height: 1.2em">No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
+        <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
     </p>
-</div>		<!-- .sidebar_content ends -->
+</div>
 
 <div class="sidebar_content" id="diario">
     <p>
@@ -109,7 +93,7 @@
     <div class="personal_message"><p>Executa o backup todos os dias, sempre no horário especificado.</p></div>
     <p>
         <label for="dayly_hour">Hora:</label><br/>
-        <input type="text" name="schedule.dayly.hour" id="dayly_hour" class="text small mascara_hora" style="width: 45px" maxlength="5" value="{{schedule_dayly_hour}}" /><br/>
+        <input type="text" name="schedule.dayly.hour" id="dayly_hour" class="text small mascara_hora" maxlength="5" value="{{schedule_dayly_hour}}" /><br/>
         <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
     </p>
     <p>
@@ -119,9 +103,9 @@
             <option value="{{level}}" {% if schedule_dayly_level == level %}selected="selected"{% endif %}>{{level}}</option>
             {% endfor %}
         </select>
-        <small style="line-height: 1.2em">No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
+        <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
     </p>
-</div>		<!-- .sidebar_content ends -->
+</div>
 
 <div class="sidebar_content" id="minuto">
     <p>
@@ -130,7 +114,7 @@
     <div class="personal_message"><p>Executa o backup todas as horas do dia, sempre no minuto especificado.</p></div>
     <p>
         <label for="hourly_hour">Minuto:</label><br/>
-        <input type="text" name="schedule.hourly.hour" id="hourly_hour" class="text small mascara_minuto" style="width: 20px" maxlength="2" value="{{schedule_hourly_hour}}" /><br/>
+        <input type="text" name="schedule.hourly.hour" id="hourly_hour" class="text small mascara_minuto" maxlength="2" value="{{schedule_hourly_hour}}" /><br/>
         <small>Exemplo: 20, 35 ou 08.</small>
     </p>
     <p>
@@ -140,6 +124,6 @@
             <option value="{{level}}" {% if schedule_hourly_level == level %}selected="selected"{% endif %}>{{level}}</option>
             {% endfor %}
         </select>
-        <small style="line-height: 1.2em">No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
+        <small>No backup full é feita uma cópia completa de todos os arquivos "marcados" para backup. No incremental é feita uma cópia apenas das modificações. É importamente sempre manter uma política mista de backups.</small>
     </p>
 </div>
