--- a/nimbus/procedures/templates/profile_add.html
+++ b/nimbus/procedures/templates/profile_add.html
@@ -2,8 +2,10 @@
 
 
 {% block headtags %}
+<link rel="stylesheet" type="text/css" href="/media/css/schedules.css" />
 <script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
 <script type="text/javascript" src="/media/js/procedures.js"></script>
+<script type="text/javascript" src="/media/js/schedules.js"></script>
 {% endblock %}
 
 {% block page %}
