--- a/nimbus/procedures/templates/profile_edit.html
+++ b/nimbus/procedures/templates/profile_edit.html
@@ -7,7 +7,7 @@
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
 		<h2>{{title}}</h2>
-	</div>		<!-- .block_head ends -->
+	</div>
 
     <div class="block_content">
 
