Organizacao do Javascript e CSS do offsite e outras modificacoes pequenas.

--- a/nimbus/filesets/templates/form_filesets_add.html
+++ b/nimbus/filesets/templates/form_filesets_add.html
@@ -17,7 +17,7 @@
 
 <p>
     {% if errors.fileset_name %}
-    <ul class="errorlist" style="">
+    <ul class="errorlist">
         <li>{{ errors.fileset_name }}</li>
     </ul>
     {% endif %}
