--- a/nimbus/storages/templates/storages_add.html
+++ b/nimbus/storages/templates/storages_add.html
@@ -1,22 +1,8 @@
 {% extends "base.html" %}
 
 {% block headtags %}
-<script type="text/javascript" charset="utf-8">
-    $(document).ready(function(){
-        $('.toggle').click(function(){
-            var target = $(this).attr('ref');
-            $(this).parent().parent().find('.' + target).slideToggle();
-        });
-    });
-</script>
-
-<style type="text/css" media="screen">
-    .storage.desativado {
-        background: #FFE5EB !important;
-        border: 2px solid #e7696d;
-        -moz-border-radius: 5px; 
-    }
-</style>
+<script type="text/javascript" src="/media/js/storages.js"></script>
+<link rel="stylesheet" type="text/css" href="/media/css/storages.css" />
 {% endblock %}
 
 {% block page %}
@@ -33,21 +19,21 @@
         <p><a href="/storages/list">Listar armazenamento</a></p>
         <div class="storages">
         {% for storage in storages %}
-            <div class="storage {% if not storage.active %}desativado{% endif %}" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
-                <div class="left" style="float: left; width: 250px">
+            <div class="storage {% if not storage.active %}desativado{% endif %}">
+                <div class="left">
                     <div class="title">
-                        <img src="/media/icons/storage.png" style="float: left; height: 32px; padding-right: 10px" />
-                        <h3 class="name" style="margin: 0 0 -5px 0; padding: 0"><a href="/storages/{{ storage.id }}/view">{{storage.name}}</a></h3>
+                        <img src="/media/icons/storage.png"/>
+                        <h3 class="name"><a href="/storages/{{ storage.id }}/view">{{storage.name}}</a></h3>
                         <small class="ip">{{storage.address}}</small>
                     </div>
-                    <p style="font-size: 10px; margin: 0; padding: 0; line-height: 1.4em"><a href="/storages/{{storage.id}}/edit/">Editar</a> - <a href="/storages/{{storage.id}}/delete/">Remover</a></p>
+                    <p class="options"><a href="/storages/{{storage.id}}/edit/">Editar</a> - <a href="/storages/{{storage.id}}/delete/">Remover</a></p>
                     
                 </div>
-                <div class="right" style="float: right; width: 600px">
-                    <div style="float: right">
+                <div class="right">
+                    <div class="floatright">
                         {% if not storage.active %}
-                        <form action="/storages/{{storage.id}}/activate/" method="post" style="float: right">
-                            <input type="submit" class="submit tiny" value="Ativar" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
+                        <form action="/storages/{{storage.id}}/activate/" method="post" class="floatright">
+                            <input type="submit" class="submit tiny" value="Ativar"/>
                         </form>
                         {% endif %}
                     </div>
