--- a/nimbus/base/templates/stat_block.html
+++ b/nimbus/base/templates/stat_block.html
@@ -8,7 +8,7 @@ Tipos possíveis: ok, warn, error
         <h3>{{i.title}}</h3>
         <div>
             {% for c in i.content %}
-            <div class="inner_message {% cycle "odd" "even" %}"><img src="/media/icons/{{c.type}}.png" /> {% if c.date %}<small>{{c.date}}</small> -{% endif %} {{c.label}} {% if c.message %}<small>({{c.message}})</small>{% endif %}</div>
+            <div class="inner_message {% cycle "odd" "even" %}" title="{{ c.tooltip }}"><img src="/media/icons/{{c.type}}.png" /> {% if c.date %}<small>{{c.date}}</small> -{% endif %} {{c.label}} {% if c.message %}<small>({{c.message}})</small>{% endif %}</div>
             {% empty %}
             <div>Não há dado para ser exibido.</div>
             {% endfor %}
