--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -1,77 +1,9 @@
 {% extends "base.html" %}
 
 {% block headtags %}
-<script type="text/javascript" charset="utf-8" src="/media/lib/js/tree_plugin.js"></script>
-<script type="text/javascript" charset="utf-8">
-    $(document).ready(function(){
-        $('.toggle').click(function(){
-            var target = $(this).attr('ref');
-            $(this).parent().parent().find('.' + target).slideToggle();
-            return false;
-        });
-        
-        
-        
-        // $('#update_tree').click(function()
-        // {
-        //     get_tree_path = "/restore/get_tree/";
-        //     update_tree('/', get_tree_path);
-        //     return false;
-        // });
-
-        $(".tree a").click(function()
-        {
-            get_tree_path = "/restore/get_tree/";
-            update_tree($(this).attr("path"), get_tree_path, '.tree');
-            return false;
-        });
-
-
-
-        // $('#update_tree_computer').click(function()
-        // {
-        //     get_tree_path = "/backup/get_tree/";
-        //     update_tree('/', get_tree_path, "#update_tree_computer");
-        //     return false;
-        // });
-
-        $(".tree_computer a").click(function()
-        {
-            get_tree_path = "/restore/get_client_tree/";
-            update_tree($(this).attr("path"), get_tree_path, ".tree_computer", "radio", "path_restore");
-            return false;
-        });
-
-
-
-        $('#buscar_arquivos').click(function(){
-            get_tree_path = "/restore/get_tree/";
-            
-            job_id = $('#jobs_list').val();
-            pattern = $('#pattern').val();
-            root_path = '/';
-            $('.tree .directory.first ul').remove().removeClass("open");
-            
-            $.post('{% url nimbus.restore.views.get_tree_search_file %}',
-                   {job_id: job_id, pattern: pattern},
-                   function(data) {
-                       mount_tree(data, root_path, get_tree_path)
-                   },
-                   "json");
-            return false;
-        });
-    });
-</script>
-<style type="text/css" media="screen">
-    h2.titulo_step {
-        -moz-border-radius-topleft: 5px;
-        -moz-border-radius-topright: 5px;
-        background: #EEEEEE;
-        border-bottom: 4px solid #E9E9E9;
-        margin-top: 30px;
-        padding: 15px 15px;
-    }
-</style>
+<script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
+<script type="text/javascript" src="/media/js/restore.js"></script>
+<link rel="stylesheet" type="text/css" href="/media/css/restore.css" />
 
 {% endblock %}
 
@@ -83,42 +15,30 @@
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
 		<h2>{{title}}</h2>
-	</div>		<!-- .block_head ends -->
+	</div>
 
     <div class="block_content">
         <form action="/restore/restore_files" method="post">
-            
+            <input id="url_tree" name="url" value="{% url nimbus.restore.views.get_tree_search_file %}" type="hidden"/>
             {% if computer %}
                 <p><a href="/computers/list">Listar todos os computadores</a></p>
                 <div class="computers">
-                    <div class="computer" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
-                        <div class="left" style="float: left; width: 250px">
+                    <div class="computer">
+                        <div class="left">
                             <div class="title">
-                                <img src="/media/icons/computer.png" style="float: left; height: 32px; padding-right: 10px" />
-                                <h3 class="name" style="margin: 0 0 -5px 0; padding: 0">{{computer.name}}</h3>
+                                <img src="/media/icons/computer.png"/>
+                                <h3 class="name">{{computer.name}}</h3>
                                 <small class="ip">{{computer.address}} - {{computer.operation_system|title}} - {% for g in computer.groups.all %}{{g.name}}{% endfor %}</small>
                             </div>
                         </div>
-                        <div class="right" style="float: right; width: 600px">
-                            <p style="font-size: 10px; margin: 0; line-height: 1.4em">{{computer.description}}</p>
+                        <div class="right">
+                            <p class="description">{{computer.description}}</p>
                         </div>
                         <div class="clear"></div>
                     </div>
                     <input type="hidden" name="computer_id" id="computer_id" value="{{computer.id}}" />
                 </div>
-                <script type="text/javascript" charset="utf-8">
-                    $(document).ready(function(){
-                        $('#procedure_id').change(function()
-                        {
-                            if ($(this).val()) {
-                                $('.restore_step_1').slideDown();
-                            } else {
-                                $('.restore_step_1').slideUp();
-                            }
-                        });
-                        $('#procedure_id').change();
-                    });
-                </script>
+                
                 {% if errors.procedure_id %}
                 <ul class="errorlist">
                     <li>{{ errors.procedure_id }}</li>
@@ -148,48 +68,14 @@
                         {% endfor %}
                     </select>
                 </p>
-                <div class="computer_error" style="display: none"></div>
-                <script type="text/javascript" charset="utf-8">
-                    $(document).ready(function(){
-                        $('#computer_id').change(function()
-                        {
-                            var computer_id = $(this).val();
-                            $.getJSON('/restore/get_procedures/' + computer_id + '/', {}, function(data)
-                            {
-                                if (data['error']) {
-                                    $('.computer_error').html($('<p>').text(data['error'])).addClass("message error").show('slow');
-                                }
-                            
-                                $('#procedure_id').empty();
-                                $('<option>').attr('value', '').text(' - Selecione - ').appendTo('#procedure_id');
-                                for (proc in data) {
-                                    proc = data[proc];
-                                    if (proc['fields'] && proc['fields']['name']) {
-                                        $('<option>').attr('value', proc['pk']).text(proc['fields']['name']).appendTo("#procedure_id");
-                                    }
-                                }
-                                $('.procedure_select').slideDown();
-                            });
-                        });
-                        $('#computer_id').change();
+                <div class="computer_error" class="hidden"></div>
                 
-                        $('#procedure_id').change(function()
-                        {
-                            if ($(this).val()) {
-                                $('.restore_step_1').slideDown();
-                            } else {
-                                $('.restore_step_1').slideUp();
-                            }
-                        });
-                        $('#procedure_id').change();
-                    });
-                </script>
                 {% if errors.procedure_id %}
                 <ul class="errorlist">
                     <li>{{ errors.procedure_id }}</li>
                 </ul>
                 {% endif %}
-                <p class="procedure_select" style="display: none">
+                <p class="procedure_select" class="hidden">
                     <label for="procedure_id">Selecione o procedimento:</label><br/>
                     <select name="procedure_id" id="procedure_id" class="styled">
                         <option value=""> - Selecione - </option>
@@ -202,47 +88,7 @@
     
             <div class="restore_step_1">
                 <h2 class="titulo_step">1. Data para restauração</h2>
-                <script type="text/javascript" charset="utf-8">
-                    $(document).ready(function(){
-                        $('.submit_step_1').click(function(){
-                            data_inicio = $('#data_inicio').val();
-                            data_fim = $('#data_fim').val();
-                            computer_id = $('#computer_id').val();
-                            procedure_id = $('#procedure_id').val();
-                        
-                            $('.restore_step_2').slideUp();
-                            $('.restore_step_3').slideUp();
-                            $('.restore_step_4').slideUp();
-                            $('.restore_step_5').slideUp();
-                        
-                            if (data_inicio && data_fim) {
-                                $.getJSON(
-                                    '/restore/get_jobs/' + procedure_id + '/' + data_inicio + '/' + data_fim + '/',
-                                    function(data)
-                                    {
-                                        $("#jobs_list").empty();
-                                        if (data) {
-                                            // TODO: Populate the jobs list.
-                                            $("<option>").val("").text(" - " + data.length + " jobs, selecione um  - ").attr("selected", "selected").appendTo("#jobs_list");
-                                            for (var i in data) {
-                                                job = data[i];
-                                                if (job.fields && job.fields.realendtime) {
-                                                    $("<option>").val(job.pk).text(job.fields.realendtime + ' - ' + job.fields.jobfiles + ' arquivos').appendTo("#jobs_list");
-                                                }
-                                            }
-                                            $("#jobs_list").change();
-                                            $('.restore_step_2').slideDown();
-                                        }
-                                    }
-                                );
-                            }
-                        
-                            return false;
-                        });
-                        
-                        $('.submit_step_1').click();
-                    });
-                </script>
+                
                 {% if errors.data_inicio %}
                 <ul class="errorlist">
                     <li>{{ errors.data_inicio }}</li>
@@ -263,53 +109,23 @@
     			</p>
     		</div>
 
-            <div class="restore_step_2" style="display: none">
+            <div class="restore_step_2" class="hidden">
                 <h2 class="titulo_step">2. Selecione um Job para restauração</h2>
 
-                <script type="text/javascript" charset="utf-8">
-                    $(document).ready(function(){
-                        $('#jobs_list').change(
-                            function(){
-                                $('.restore_step_3').slideUp();
-                                
-                                $('.tree .directory.first ul').remove().removeClass("open");
-                                
-                                if ($(this).val()) {
-                                    $('.restore_step_3').slideDown();
-                                } else {
-                                    $('.restore_step_3').slideUp();
-                                }
-                            }
-                        ).click();
-                    });
-                </script>
                 {% if errors.job_id %}
                 <ul class="errorlist">
                     <li>{{ errors.job_id }}</li>
                 </ul>
                 {% endif %}
-                <select name="job_id" class="styled" id="jobs_list" style="width: 600px">
+                <select name="job_id" class="styled" id="jobs_list">
                     <option value=""> - Selecione um Job - </option>
                 </select>
                 <div class="clear"></div>
             </div>
 
-            <div class="restore_step_3" style="display: none">
+            <div class="restore_step_3" class="hidden">
                 <h2 class="titulo_step">3. Arquivos para restauração</h2>
-                
-                <script type="text/javascript" charset="utf-8">
-                    $(document).ready(function(){
-                        $('#pattern').keydown(
-                            function(e){
-                                if (e.keyCode == 13) {
-                                    $('#buscar_arquivos').click();
-                                    return false;
-                                }
-                            }
-                        )
-                    });
-                </script>
-                
+            
                 <p>
     				<label>Buscar arquivo:</label>
     				<input type="text" name="pattern" id="pattern" class="text small" />
@@ -322,14 +138,8 @@
                 
                 <h2 class="titulo_step">4. Restauração</h2>
                 
-                <ul class="tree_computer" style="margin-bottom: 20px"><li class="directory first"><span><a href="#" path="/">Selecione o local para restauração</a></span></li></ul>
+                <ul class="tree_computer"><li class="directory first"><span><a href="#" path="/">Selecione o local para restauração</a></span></li></ul>
                 
-                <!-- <p>
-                    <label>Selecione o local de destino:</label><br/>
-                    <input type="radio" name="destino" checked="checked" class="radio" value="download" /> <label>Download</label>
-                    <input type="radio" name="destino" class="radio" value="server" /> <label>Armazenar no servidor</label>
-                    <input type="radio" name="destino" class="radio" value="email" /> <label>Enviar por e-mail</label><br/>
-                </p> -->
     		    <p>
                     <input type="submit" class="submit mid" value="Restaurar" />
                 </p>
