--- a/nimbus/system/templates/pid_history.html
+++ b/nimbus/system/templates/pid_history.html
@@ -1,74 +1,9 @@
 {% extends "base.html" %}
 
-
 {% block headtags %}
-<script type="text/javascript" charset="utf-8">
-    function update_table(table) {
-        table = $('.request_list');
-        $.post('{{script_name}}', {ajax: 1}, function(data)
-        {
-            table.find('tbody tr').remove();
-            for (var item in data) {
-                down = data[item];
-                tr = $('<tr>');
-                pid = $('<td>').text(down.fields.pid);
-                name = $('<td>').text(down.fields.name);
-                criado_em = $('<td>').text(down.fields.created_at);
-                estado = $('<td>').text(down.fields.status);
-                
-                tr.append(pid).append(name).append(criado_em).append(estado);
-                tr.appendTo(table.find('tbody'));
-            }
-        },
-        "json");
-    }
-    
-    
-    var countDownInterval = 20;
-    var countDownTime = countDownInterval + 1;
-    
-    function countDown(){
-        countDownTime--;
-        if (countDownTime <= 0){
-            $('.tempo_restante').text(countDownTime);
-            countDownTime = countDownInterval;
-            clearTimeout(counter);
-            // window.location="http://www.wallpaperama.com";
-            update_table();
-            return startit();
-        }
-        $('.tempo_restante').text(countDownTime);
-        counter=setTimeout("countDown()", 1000);
-    }
-
-    function startit(){
-        if (document.all||document.getElementById)
-            $('.tempo_restante').text(countDownTime);
-        countDown()
-    }
-
-    $(document).ready(function(){
-        startit()
-        $('.atualizar_agora').click(function(){
-            update_table();
-            countDownTime = countDownInterval;
-            clearTimeout(counter);
-            startit();
-        });
-    });
-</script>
-
-<style type="text/css" media="screen">
-    .concluido_wrapper {
-        width: 100%; border: 1px solid green;
-    }
-    
-    .concluido_percent {
-        background: #67ca1e;
-    }
-</style>
+<script type="text/javascript" src="/media/js/system.js"></script>
+<link rel="stylesheet" type="text/css" href="/media/css/system.css" />
 {% endblock %}
-
 
 {% block content %}
 
@@ -79,16 +14,16 @@
 		<div class="bheadr"></div>
 		<h2>{{ title }}</h2>
 		<div class="right">
-            A lista será atualizada em <span class="tempo_restante">10</span> segundos. <small>(<a href="#" class="atualizar_agora">atualizar agora</a>)</small>
+            A lista será atualizada em <span class="tempo_restante">10</span> segundos. <small>(<a href="#" rel="{{script_name}}" class="atualizar_agora">atualizar agora</a>)</small>
 		</div>
-	</div>		<!-- .block_head ends -->
+	</div>
 
     <div class="block_content">
 
         {% if not object_list %}
             <p>Não existem processos ativos ou inativos no momento.</p>
         {% else %}
-            <table class="request_list" style="width: 100%">
+            <table class="request_list">
                 <thead>
                     <tr>
                         <th>PID</th>
