Adicionando pagina do Wizard para exibir licenca.

--- a/nimbus/base/templates/base_wizard.html
+++ b/nimbus/base/templates/base_wizard.html
@@ -19,6 +19,19 @@
 		
 		#id_country { width: 400px; }
 		#id_area { width: 300px; }
+		
+		#license-box {
+			font-size: 11px;
+			border: 1px solid #CCC;
+			height: 300px;
+			margin: 10px 0 20px;
+			overflow-y: scroll;
+			padding: 10px;
+		}
+		
+		.block.small.center.wide {
+			width: 800px;
+		}
     </style>
 	
 	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=7" /><![endif]-->
@@ -66,7 +79,7 @@
 			
 		    <div class="logo_center"><img src="/media/images/nimbus_logo.png" /></div>
 			
-			<div class="block small center login">
+			<div class="block small center login {{wide}}">
 			
 				<div class="block_head">
 					<div class="bheadl"></div>
