Pequena correcao no html

--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -156,7 +156,7 @@
 		
             		<div class="block_content">
 			
-			            <div #error-box>
+			            <div id="error-box">
 			                {% if errors.schedule_name %}
                             <ul class="errorlist">
                                 <li>{{ errors.schedule_name }}</li>
